{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 107,
  "lineage": "bf4254fc-59ab-02ad-f498-fb6e577125e4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04207fdeaee1e53b7",
            "domain": "vpc",
            "id": "eipalloc-04207fdeaee1e53b7",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-132-100-222.us-east-2.compute.amazonaws.com",
            "public_ip": "3.132.100.222",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0283a57753b18025b",
            "arn": "arn:aws:ec2:us-east-2:653493293496:instance/i-00b116bc87f51b310",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b116bc87f51b310",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b04004d9dc5fd451",
            "private_dns": "ip-10-0-4-213.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bfe32566fe74096a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01bc104350bdc4a14"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0015c74c9469bb0d6",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01bc104350bdc4a14"
            ]
          },
          "dependencies": [
            "aws_security_group.app-sg",
            "aws_security_group.matomo-lb-sg",
            "aws_security_group.web-sg",
            "aws_subnet.pri-subnet",
            "aws_vpc.matomo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0283a57753b18025b",
            "arn": "arn:aws:ec2:us-east-2:653493293496:instance/i-036fc8a87909b8b7c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-036fc8a87909b8b7c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-083cbd957ab7c6f0e",
            "private_dns": "ip-10-0-1-21.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0873ebbf126496700",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04df2e56050dece98"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09e1a4715c1e8a77a",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04df2e56050dece98"
            ]
          },
          "dependencies": [
            "aws_security_group.matomo-lb-sg",
            "aws_security_group.web-sg",
            "aws_subnet.pub-subnet",
            "aws_vpc.matomo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "matomo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:653493293496:internet-gateway/igw-09a14ac1cfbceed3e",
            "id": "igw-09a14ac1cfbceed3e",
            "owner_id": "653493293496",
            "vpc_id": "vpc-0bcf5f5d3bdd9cdf9"
          },
          "dependencies": [
            "aws_vpc.matomo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "matomo-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:653493293496:loadbalancer/app/matomo-load-balancer/dbf93e263142f847",
            "arn_suffix": "app/matomo-load-balancer/dbf93e263142f847",
            "desync_mitigation_mode": "defensive",
            "dns_name": "matomo-load-balancer-1181131677.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:653493293496:loadbalancer/app/matomo-load-balancer/dbf93e263142f847",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "matomo-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03b89d22fd89c6465"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0802a535a451ba758"
              },
              {
                "subnet_id": "subnet-09e1a4715c1e8a77a"
              }
            ],
            "subnets": [
              "subnet-0802a535a451ba758",
              "subnet-09e1a4715c1e8a77a"
            ],
            "vpc_id": "vpc-0bcf5f5d3bdd9cdf9",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.matomo-lb-sg",
            "aws_subnet.pub-subnet",
            "aws_vpc.matomo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:653493293496:listener/app/matomo-load-balancer/dbf93e263142f847/e88ad8909b481d57",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:653493293496:targetgroup/web-target-group/3520ccd60a4a97b8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:653493293496:listener/app/matomo-load-balancer/dbf93e263142f847/e88ad8909b481d57",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:653493293496:loadbalancer/app/matomo-load-balancer/dbf93e263142f847",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.matomo-lb",
            "aws_lb_target_group.web-tg",
            "aws_security_group.matomo-lb-sg",
            "aws_subnet.pub-subnet",
            "aws_vpc.matomo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:653493293496:targetgroup/web-target-group/3520ccd60a4a97b8",
            "arn_suffix": "targetgroup/web-target-group/3520ccd60a4a97b8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:653493293496:targetgroup/web-target-group/3520ccd60a4a97b8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bcf5f5d3bdd9cdf9"
          },
          "dependencies": [
            "aws_vpc.matomo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb-tg-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:653493293496:targetgroup/web-target-group/3520ccd60a4a97b8-20221221110545631900000005",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:653493293496:targetgroup/web-target-group/3520ccd60a4a97b8",
            "target_id": "i-036fc8a87909b8b7c"
          },
          "dependencies": [
            "aws_instance.web-server",
            "aws_lb_target_group.web-tg",
            "aws_security_group.matomo-lb-sg",
            "aws_security_group.web-sg",
            "aws_subnet.pub-subnet",
            "aws_vpc.matomo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "matomo-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04207fdeaee1e53b7",
            "connectivity_type": "public",
            "id": "nat-061a207bef418a577",
            "network_interface_id": "eni-0ce194cfb04be50aa",
            "private_ip": "10.0.1.130",
            "public_ip": "3.132.100.222",
            "subnet_id": "subnet-09e1a4715c1e8a77a"
          },
          "dependencies": [
            "aws_eip.ngw-eip",
            "aws_subnet.pub-subnet",
            "aws_vpc.matomo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:653493293496:route-table/rtb-03723074f39210481",
            "id": "rtb-03723074f39210481",
            "owner_id": "653493293496",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-061a207bef418a577",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bcf5f5d3bdd9cdf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ngw-eip",
            "aws_nat_gateway.matomo-ngw",
            "aws_subnet.pub-subnet",
            "aws_vpc.matomo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:653493293496:route-table/rtb-07153d7493eb0c923",
            "id": "rtb-07153d7493eb0c923",
            "owner_id": "653493293496",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a14ac1cfbceed3e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bcf5f5d3bdd9cdf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.matomo-igw",
            "aws_vpc.matomo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a28d05dc69eeffb6",
            "route_table_id": "rtb-03723074f39210481",
            "subnet_id": "subnet-0eccc26ab1d534e0a"
          },
          "dependencies": [
            "aws_eip.ngw-eip",
            "aws_nat_gateway.matomo-ngw",
            "aws_route_table.pri-route",
            "aws_subnet.pri-subnet",
            "aws_subnet.pub-subnet",
            "aws_vpc.matomo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039f55b511bee751d",
            "route_table_id": "rtb-07153d7493eb0c923",
            "subnet_id": "subnet-09e1a4715c1e8a77a"
          },
          "dependencies": [
            "aws_internet_gateway.matomo-igw",
            "aws_route_table.pub-route",
            "aws_subnet.pub-subnet",
            "aws_vpc.matomo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:653493293496:security-group/sg-01bc104350bdc4a14",
            "description": "This sg allows traffic from web-server at port 8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01bc104350bdc4a14",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04df2e56050dece98"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-security-group",
            "name_prefix": "",
            "owner_id": "653493293496",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bcf5f5d3bdd9cdf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.matomo-lb-sg",
            "aws_security_group.web-sg",
            "aws_vpc.matomo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "matomo-lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:653493293496:security-group/sg-03b89d22fd89c6465",
            "description": "This sg allows the http and https traffic internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b89d22fd89c6465",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-security-group",
            "name_prefix": "",
            "owner_id": "653493293496",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bcf5f5d3bdd9cdf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.matomo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:653493293496:security-group/sg-0b383abaf96752c44",
            "description": "This sg allows traffic from app-server at port 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b383abaf96752c44",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01bc104350bdc4a14"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "653493293496",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bcf5f5d3bdd9cdf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app-sg",
            "aws_security_group.matomo-lb-sg",
            "aws_security_group.web-sg",
            "aws_vpc.matomo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:653493293496:security-group/sg-04df2e56050dece98",
            "description": "This sg allows the http and https traffic from alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04df2e56050dece98",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03b89d22fd89c6465"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03b89d22fd89c6465"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "weg-security-group",
            "name_prefix": "",
            "owner_id": "653493293496",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bcf5f5d3bdd9cdf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.matomo-lb-sg",
            "aws_vpc.matomo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:653493293496:subnet/subnet-0eccc26ab1d534e0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eccc26ab1d534e0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "653493293496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0bcf5f5d3bdd9cdf9"
          },
          "dependencies": [
            "aws_vpc.matomo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:653493293496:subnet/subnet-0015c74c9469bb0d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0015c74c9469bb0d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "653493293496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0bcf5f5d3bdd9cdf9"
          },
          "dependencies": [
            "aws_vpc.matomo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:653493293496:subnet/subnet-09e1a4715c1e8a77a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e1a4715c1e8a77a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "653493293496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0bcf5f5d3bdd9cdf9"
          },
          "dependencies": [
            "aws_vpc.matomo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:653493293496:subnet/subnet-0802a535a451ba758",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0802a535a451ba758",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "653493293496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0bcf5f5d3bdd9cdf9"
          },
          "dependencies": [
            "aws_vpc.matomo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "matomo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:653493293496:vpc/vpc-0bcf5f5d3bdd9cdf9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00caac99b00251176",
            "default_route_table_id": "rtb-0e7dfcaf144adf0f8",
            "default_security_group_id": "sg-076180666121ba65f",
            "dhcp_options_id": "dopt-06519a563d8fca7e7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bcf5f5d3bdd9cdf9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e7dfcaf144adf0f8",
            "owner_id": "653493293496"
          }
        }
      ]
    }
  ]
}